--- a/WebApi-Aurelia/bin/WebApi-Aurelia.dll.config
+++ b/WebApi-Aurelia/bin/WebApi-Aurelia.dll.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApi-Aurelia-20170421032141.mdf;Initial Catalog=aspnet-WebApi-Aurelia-20170421032141;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="SBNContext" connectionString=" server=.\SQL2014EXPRESS;database=DevSmartBidNet;Integrated Security=True;Connect Timeout=30; Application Name=SmartInsight" providerName="System.Data.SqlClient" />
+    <add name="ExampleContext" connectionString=" server=.\SQL2014EXPRESS;database=zdbexample;Integrated Security=True;Connect Timeout=30; Application Name=SmartInsight" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
